--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ VITE_APP_CLIENT_PORT=9001
 VITE_APP_CLIENT_URL=http://localhost:${VITE_APP_CLIENT_PORT}
 VITE_APP_SERVER_URL=http://localhost:${VITE_APP_SERVER_PORT}
 VITE_APP_API_URL=${VITE_APP_SERVER_URL}/api
-VITE_APP_LOCALE=en
+VITE_APP_LOCALE=ch
